--- a/aitReminder.Wpf/Views/MainWindow.xaml
+++ b/aitReminder.Wpf/Views/MainWindow.xaml
@@ -3,15 +3,17 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:aitReminder.Wpf"
+        xmlns:local="clr-namespace:aitReminder.Wpf" 
         xmlns:Views="clr-namespace:aitReminder.Wpf.Views" x:Class="aitReminder.Wpf.MainWindow"
         mc:Ignorable="d"
-        Title="AIT Reimnder" Height="450" Width="800">
-    <StackPanel>
-        <Views:MenuView x:Name="menuView" Margin="0,0,-0.4,0"/>
-        <Views:RemindersListView x:Name="remindersListView" Height="137" Margin="0,0,-0.4,0"/>
+        Title="AIT Reimnder" Height="450" Width="400">
+    <DockPanel>
+        <Views:MenuView x:Name="menuView" 
+                        DockPanel.Dock="Top"/>
+        
+        <Views:RemindersStatusBarView x:Name="statusBarView"
+                             DockPanel.Dock="Bottom"/>
+        <Views:RemindersListView x:Name="remindersListView"/>
 
-
-
-    </StackPanel>
+    </DockPanel>
 </Window>
