--- a/aitReminder.Wpf/Views/RemindersListView.xaml
+++ b/aitReminder.Wpf/Views/RemindersListView.xaml
@@ -1,30 +1,84 @@
 ﻿<UserControl x:Class="aitReminder.Wpf.Views.RemindersListView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:aitReminder.Wpf.Views"
-             mc:Ignorable="d" 
-             >
-    <StackPanel>
-        <ListView MinHeight="100" 
-                  MinWidth="300"
-                  x:Name="remindersListView"
-                  >
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn Header="Name" 
-                                    Width="100"
-                                    DisplayMemberBinding="{Binding Name}"
-                                    />
-                    <GridViewColumn Header="Start date" 
-                                    Width="100"
-                                    DisplayMemberBinding="{Binding StartDate}"
-                                    />
-                    
-                </GridView>
-            </ListView.View>
-        </ListView>
+             mc:Ignorable="d">
+    <UserControl.Resources>
+        <BooleanToVisibilityConverter x:Key="BoolToVisConverter" />
 
-    </StackPanel>
+        <DataTemplate x:Key="ReminderTemplate">
+            <Grid Width="Auto"
+                  Height="Auto">
+                <Grid.Resources>
+                    <Style TargetType="Label">
+                        <Setter Property="FontStyle"
+                                Value="Italic" />
+                        <Setter Property="Margin"
+                                Value="2" />
+                    </Style>
+                </Grid.Resources>
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="1*" />
+                    <RowDefinition Height="1*" />
+                    <RowDefinition Height="1*" />
+                </Grid.RowDefinitions>
+
+                <Label x:Name="NameLabel"
+                       Content="{Binding Name}"
+                       Grid.RowSpan="1"
+                       Height="Auto"
+                       Padding="1"
+                       FontWeight="Bold" />
+
+                <Label x:Name="DescriptionLabel"
+                       Content="{Binding Description}"
+                       Height="Auto"
+                       Grid.Row="1"
+                       Grid.RowSpan="1" />
+
+                <Grid Grid.Row="2">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+
+                    <Image Source="/aitReminder.Wpf;component/Resources/clock.png"
+                           Height="20"
+                           Margin="2"/>
+
+                    <Label x:Name="StartDateLabel"
+                           Content="{Binding StartDate}"
+                           ContentStringFormat="g"
+                           VerticalAlignment="Center"
+                           Grid.Column="1" />
+
+                    <Image Grid.Column="2"
+                           Source="/aitReminder.Wpf;component/Resources/repeat.png"
+                           Visibility="{Binding Repeated, Converter={StaticResource BoolToVisConverter}}"
+                           Height="20"
+                           Margin="2" />
+                    
+                    <Label Grid.Column="3"
+                           Content="{Binding RepeatInterval}"
+                           VerticalAlignment="Center"
+                           Visibility="{Binding Repeated, Converter={StaticResource BoolToVisConverter}}" />
+
+
+                </Grid>
+            </Grid>
+        </DataTemplate>
+    </UserControl.Resources>
+    <Grid>
+        
+        <ListBox x:Name="reminderDataGrid"
+                 ItemsSource="{Binding}"
+                 ItemTemplate="{DynamicResource ReminderTemplate}"
+                 SelectionChanged="reminderDataGrid_SelectionChanged"/>
+
+    </Grid>
 </UserControl>
